# youtube-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/ytdownload/: __main__.py
src/ytdownload/api/: youtube.py
src/ytdownload/gui/: download_item.py  main_window.py  playlist_item.py  video_item.py
src/ytdownload/services/: downloader.py
src/ytdownload/utils/: helpers.py  logger.py  ssl_fix.py
tests/: test_youtube_api.py
